Fix some overflow-y issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -109,6 +109,8 @@ nav {
   flex: 1;
   display: flex;
   flex-direction: column;
+  /* Let .input/.output shrink to always fit on container. */
+  min-height: 0;
 }
 
 .container,
@@ -168,8 +170,9 @@ main {
   aside {
     display: flex;
     flex-direction: column;
-
     margin-right: 15px;
+    /* Let aside scroll when too small instead of scrolling whole screen. */
+    overflow-y: auto;
   }
 
   .options {
